--- a/tensornetwork_play.ipynb
+++ b/tensornetwork_play.ipynb
@@ -6,7 +6,7 @@
       "name": "tensornetwork play.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNzy3MdFD6tVkOIQeP7wzT9",
+      "authorship_tag": "ABX9TyMTLhzpC8GMau7HCmQHOEvo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -132,14 +132,15 @@
         "  return feature_map\n",
         "\n",
         "#cluster average function, will be used later for generating the new_x, so to train over variations of the data?\n",
-        "def avg_cluster(data, size):\n",
-        "  out_shape = (data.shape[1]//size, data.shape[2]//size)\n",
-        "  clustered_sample = np.zeros(out_shape)\n",
-        "  for i in range(0, out_shape[0]):\n",
-        "    for j in range(0, out_shape[1]):\n",
-        "      clustered_sample[i,j] = np.mean(sample[size*i:size*(i+1), size*j:size*(j+1)])\n",
-        "  return clustered_sample\n",
-        "\n",
+        "def avg_cluster_vect(vector, size):\n",
+        "  shapes = (vector.shape[1]//size, vector.shape[2]//size)\n",
+        "  clustered = np.zeros((vector.shape[0], shapes[0], shapes[1]))\n",
+        "  for k in range(0, vector.shape[0]):\n",
+        "    for i in range(0, shapes[0]):\n",
+        "      for j in range(0, shapes[1]):\n",
+        "        clustered[k,i,j] = np.mean(vector[k,size*i:size*(i+1), size*j:size*(j+1)])\n",
+        "  return clustered\n",
+        "  \n",
         "# cluster = np.vectorize(avg_cluster)\n",
         "x_train0 = np.zeros((len(x_train), 14, 14))\n",
         "for i, sample in enumerate(x_train):\n",
@@ -524,7 +525,7 @@
         "      #    \\    |    /\n",
         "      #      ---x---\n",
         "\n",
-        "      # Reshape input to matrix.\n",
+        "      # Reshape input to tensor.\n",
         "      input_vec = tf.reshape(input_vec, (419,7,7))\n",
         "\n",
         "\n",
