added markdown comments

--- a/final_nb.ipynb
+++ b/final_nb.ipynb
@@ -239,6 +239,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The loss quickly converges to a finite value after $40$ epochs. The model reaches a precision of about 90% with $(d,m) = (3,5)$.\n",
+    "\n",
+    "The two hyperparameters can be tuned through a grid search. All the combinations of values $(d,m)$ with $d \\in \\{2, 4, 7\\}$ and $m \\in \\{2,5,11\\}$ were tested. The plots below illustrate their effect on overfitting."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -285,6 +294,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A larger dimensionality $d$ of the feature mapping $\\phi$ causes the model to overfit. Overall, a larger bond dimension increases the model accuracy. However, it also causes further overfitting when more extreme values are used.\n",
+    "\n",
+    "The effect of larger values for these parameters would likely be more meaningful when attempting to classify data of higher dimensionality. The advantage of the matrix product state lies precisely in its ability to achieve tensor representations with lower number of parameters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### MNIST Handwritten digits"
    ]
   },
@@ -292,7 +310,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The MNIST handwritten digits dataset is standard for proof-of-concept in classification models. Each sample is originally $28\\times 28$ pixels on a single channel, with integer values ranging from $0$ to $255$, which are scaled to a $[0,1]$ range. This prevents neurons from saturating. These are downsampled by averaging each cluster of $2\\times 2$ pixels in the input. This can be quickly achieved by directly applying ```keras.layers.AveragePooling2D``` on the normalized input."
+    "The MNIST handwritten digits dataset is standard for proof-of-concept in classification models. Convolutional neural networks are traditionially applied for image classification, being capable of perceiving relationships between closely neighboring features. These have low complexity by nature. However, the output of the model eventually needs to be flattened and reduced to the number of classes. This is achieved by applying fully connected layers, which we replace with simple matrix product states.\n",
+    "\n",
+    "Each sample is originally $28\\times 28$ pixels on a single channel, with integer values ranging from $0$ to $255$, which are scaled to a $[0,1]$ range. This prevents neurons from saturating. These are downsampled by averaging each cluster of $2\\times 2$ pixels in the input. This can be quickly achieved by directly applying ```keras.layers.AveragePooling2D``` on the normalized input. The labels are one-hot encoded in order to obtain a softmax output.\n",
+    "\n",
+    "This feature reduction aims to reduce the training time of the model."
    ]
   },
   {
@@ -411,7 +433,7 @@
     "incorrect_indices = y_test[prediction != y_test]\n",
     "\n",
     "_, score = tn_MNIST.evaluate(mnist_test)\n",
-    "print(f\"Model scored with {score*100}% precision on the test set.\")"
+    "print(f\"Model scored with {score*100.:2f}% precision on the test set.\")"
    ]
   },
   {
@@ -436,6 +458,13 @@
     "tn_mnist_fig = plot_loss_acc(hist_dict.history, starting_epoch=1, fontsize=16, figsize= (12,8), tight_layout='pad')\n",
     "\n",
     "fig_dict['mnist_tn'] = tn_mnist_fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model quickly starts overfitting. This effect may be mitigated by applying any traditional techniques such as batch normalization, intermediate drop-out, or stronger regularizers."
    ]
   },
   {
@@ -469,6 +498,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Generally, the model classified with a solid accuracy. The larger groups of misclassified samples are likely due to subtle differences in the samples, which the classifier cannot seem to discern."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Fruit and vegetable recognition"
    ]
   },
@@ -476,7 +512,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To test advanced tensor network architectures, a more complex dataset was selected. The fruit and vegetable dataset includes $131$ classes. The input is downsized from $100 \\times 100$ to $50 \\times 50$. Each sample is composed of the three RGB channels."
+    "To test advanced tensor network architectures, a more complex dataset was selected. The fruit and vegetable dataset includes $131$ classes. The input is downsized from $100 \\times 100$ to $50 \\times 50$. Each sample is composed of the three RGB channels.\n",
+    "\n",
+    "This data set was chosen due to its large label set, serving as a limiting case of the predictive power of simpler models. We employ an architecture corresponding to a larger number of parameters, to emphasize the reduction of trainable weights when using matrix product states. We also introduce matrix product operators, based on similar principles, to store the convolution filters with lower number of parameters."
    ]
   },
   {
@@ -558,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The architecture of the model consists of a classic convolutional layer, followed by two convolutional matrix product operators (MPO). These function as traditional layers, while simultaneously storing the kernel as a MPO. These layers' outputs are pooled and finally sent to MPOs equivalent to fully connected layers of $64$ and $131$ neurons, respectively."
+    "The architecture of the model consists of a classic convolutional layer, followed by two convolutional matrix product operators (MPO). These function as traditional layers, while simultaneously storing the kernel as a MPO. These layers' outputs are pooled and finally sent to MPS equivalent to fully connected layers of $64$ and $131$ neurons, respectively."
    ]
   },
   {
